# napari-imc

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  plugin_preview.yml
.napari/: DESCRIPTION.md  config.yml
napari_imc/: __init__.py  __main__.py  _dock_widget.py  _reader.py  imc.py  imc_controller.py  imc_widget.py  mcd_dialog.py  napari.yaml
napari_imc/_tests/: test_dummy.py  test_imc.py
napari_imc/io/: __init__.py  base.py  imaxt.py  mcd.py  txt.py
napari_imc/models/: __init__.py  base.py  channel.py  imc_file.py  imc_file_acquisition.py  imc_file_panorama.py
napari_imc/widgets/: __init__.py  _color_picker.py  channel_controls_widget.py  channel_table_model.py  channel_table_view.py  color_picker.py  imc_channel_controls_widget.py  imc_channel_table_view.py  imc_file_tree_model.py  imc_file_tree_view.py  imc_widget.py  utils.py
napari_imc/widgets/models/: __init__.py  imc_channel_table_model.py  imc_file_tree_model.py
